--- a/src/app/proyectos/condominos/condomino-list/condomino-list.component.html
+++ b/src/app/proyectos/condominos/condomino-list/condomino-list.component.html
@@ -29,7 +29,9 @@
             <td>{{condomino.numSeguro}}</td>
             <td>{{condomino.correo}}</td>
             <td> 
-                <button mat-raised-button color="accent" (click) ="editar(i)" >Editar</button>
+                <button mat-raised-button class="colorB" (click) ="editar(i)" >
+                    <mat-icon>create</mat-icon>
+                </button>
              </td>
         </tr>
     </tbody>
