--- a/src/app/proyectos/condominos/form-edit/form-edit.component.html
+++ b/src/app/proyectos/condominos/form-edit/form-edit.component.html
@@ -78,6 +78,7 @@
         </table>
     </div>
     <div class="buttonG">
-        <!-- <button mat-raised-button color="primary" (click) = "guardarCondomino()">Guardar</button>  -->
+        <button mat-raised-button color="primary" >Guardar</button> 
+        <button mat-raised-button style="margin-left: 10px" color="warn" onclick="history.back()">Regresar</button> 
     </div>
 </form>
